--- a/opennmt-tf/train_alignment_2.yaml
+++ b/opennmt-tf/train_alignment_2.yaml
@@ -19,42 +19,37 @@ gpu_ranks: [0]
 # Where to save the checkpoints
 save_model: saved_model/have_alignment/model
 save_checkpoint_steps: 1000
-valid_steps: 10000
+keep_checkpoint: 10
+seed: 3435
 train_steps: 20000
-
-# Batching
-queue_size: 10000
-bucket_size: 32768
-batch_type: "tokens"
-batch_size: 4096
-valid_batch_size: 8
-max_generator_batches: 2
-accum_count: [4]
-accum_steps: [0]
-
-# Optimization
-model_dtype: "fp32"
-optim: "adam"
-learning_rate: 2
+valid_steps: 10000
 warmup_steps: 8000
-decay_method: "noam"
-adam_beta2: 0.998
-max_grad_norm: 0
-label_smoothing: 0.1
-param_init: 0
-param_init_glorot: true
-normalization: "tokens"
+report_every: 100
 
-# Model
-encoder_type: transformer
 decoder_type: transformer
-position_encoding: true
-enc_layers: 6
-dec_layers: 6
-heads: 8
-rnn_size: 512
+encoder_type: transformer
 word_vec_size: 512
+rnn_size: 512
+layers: 6
 transformer_ff: 2048
-dropout_steps: [0]
-dropout: [0.1]
-attention_dropout: [0.1]
+heads: 8
+
+accum_count: 8
+optim: adam
+adam_beta1: 0.9
+adam_beta2: 0.998
+decay_method: noam
+learning_rate: 2.0
+max_grad_norm: 0.0
+
+batch_size: 4096
+batch_type: tokens
+normalization: tokens
+dropout: 0.1
+label_smoothing: 0.1
+
+max_generator_batches: 2
+
+param_init: 0.0
+param_init_glorot: 'true'
+position_encoding: 'true'
