--- a/opennmt-tf/train.yaml
+++ b/opennmt-tf/train.yaml
@@ -7,16 +7,19 @@ data:
     corpus_1:
         path_src: train.prepared.vi
         path_tgt: train.prepared.en
-        
+    valid:
+        path_src: tst2012.prepared.vi
+        path_tgt: tst2012.prepared.en
+
 # Train on a single GPU
 world_size: 1
 gpu_ranks: [0]
 
 # Where to save the checkpoints
 save_model: saved_model/run/model
-save_checkpoint_steps: 10000
+save_checkpoint_steps: 1000
 valid_steps: 10000
-train_steps: 200000
+train_steps: 20000
 
 # Batching
 queue_size: 10000
