--- a/opennmt-tf/colab_build_vocab.yaml
+++ b/opennmt-tf/colab_build_vocab.yaml
@@ -1,3 +1,6 @@
+# The result location
+save_data: result/sample
+
 # The vocabulary location
 src_vocab: /content/drive/MyDrive/opennmt-tf/vocabulary/train.prepared.vocab.vi
 tgt_vocab: /content/drive/MyDrive/opennmt-tf/vocabulary/train.prepared.vocab.en
