--- a/opennmt-tf/train_alignment_google_colab.yaml
+++ b/opennmt-tf/train_alignment_google_colab.yaml
@@ -7,14 +7,13 @@ data:
     corpus_1:
         path_src: /content/Improving-Vietnamese-English-neural-machine-translation-with-guiding-word-alignments/opennmt-tf/train.prepared.vi
         path_tgt: /content/Improving-Vietnamese-English-neural-machine-translation-with-guiding-word-alignments/opennmt-tf/train.prepared.en
+        path_align: /content/Improving-Vietnamese-English-neural-machine-translation-with-guiding-word-alignments/opennmt-tf/forward.align
+        transforms: []
+        weight: 1
     valid:
         path_src: /content/Improving-Vietnamese-English-neural-machine-translation-with-guiding-word-alignments/opennmt-tf/tst2012.prepared.vi
         path_tgt: /content/Improving-Vietnamese-English-neural-machine-translation-with-guiding-word-alignments/opennmt-tf/tst2012.prepared.en
-    train_alignments: /content/Improving-Vietnamese-English-neural-machine-translation-with-guiding-word-alignments/opennmt-tf/forward.align
-
-params:
-  guided_alignment_type: ce
-  guided_alignment_weight: 1
+        transforms: []
 
 # Train on a single GPU
 world_size: 1
